--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* calculadora*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
 *{
     margin: 0;
@@ -7,7 +9,8 @@
 }
 body{
     border: 2px solid #000000;
-    background: linear-gradient(#00AAFF, #00FF6C);
+    background: linear-gradient(#d4dadd, #a245e0);
+    
 }
 
 .container{
@@ -20,42 +23,68 @@ body{
 .calculator{
     background-color: #ecf0f3;
     padding: 15px;
-    width: 250px;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    box-shadow: inset 5px 5px 12px #000000,
-                      5px 5px 12px rbga(0,0,0,.16);
+    width: 242px;
+    font-family: 'Roboto', sans-serif;
+    font-size: medium;
+    font-weight: 500;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    box-shadow: 1px 1px 4px #ecf0f3,
+                -2px -2px 4px #0f0f0f;
+}
+
+#result{
+    width: 100%;
+    height: 50px;
+    margin-bottom: 5px;
+    box-shadow: inset 1px 0 2px #a09f9f;
 }
 
 .btn,
 .operator{
     width: 50px;
-    height: 80px;
+    height: 60px;
     margin-bottom: 5px;
+    box-shadow: 1px 1px 3px #363636,
+                -1px -1px 3px #fff;
+    transition: all .3s;
+    -webkit-transition: all .3s;
+    -moz-transition: all .3s;
+    -ms-transition: all .3s;
+    -o-transition: all .3s;
 }
-/* boton modo */
+.operator:hover{
+    background-color: #bd6af5;
+}
+.btnEqual{
+    width: 102px;
+    height: 60px;
+    background-color: rgb(250, 185, 107);
+}
+
+/* boton modo oscuro*/
 label{
-    background: #cccccc;
+    background: #f7f8b3;
     width:60px;
-    height: 24px;
+    height: 23px;
     display:inline-block;
     margin-top:10px;
     margin-left: 10px;
-    bordeR:1px solid rgba(0,0,0,0.5);
+    border:2px solid rgba(0,0,0,0.5);
     padding:0;
     border-radius:15px;
 }
 label .toggle{
     transition: .2s;
-    width:22px;
-    height: 22px;
+    width:23px;
+    height: 23px;
     border:1px solid rgba(0,0,0,0.5);
     display:block;
     border-radius:100%;
-    background: #ddd;
+    background: rgb(253, 249, 249);
     -webkit-transition: .2s;
     -moz-transition: .2s;
     -ms-transition: .2s;
@@ -67,9 +96,40 @@ input[type="checkbox"]{
 }
 
 input[type="checkbox"]:checked + .toggle{
-    margin-left:40px;
+    margin-left:36px;
     background-color: #37393f;
 }
-.container .dark{
+
+.dark{
     background-color: #252525;
+}
+.light{
+    background-color:#ecf0f3;
+}
+
+/* Mobile */
+
+@media (max-width: 768px) {
+    .container{
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .btn,
+    .operator{
+        width: 50px;
+        height: 60px;
+        margin-bottom: 5px;
+        box-shadow: 1px 1px #363636;
+    }
+    .operator:hover{
+        background-color: #bd6af5;
+    }
+    .btnEqual{
+        width: 102px;
+        height: 60px;
+        background-color: rgb(250, 185, 107);
+    }
 }
