--- a/style.css
+++ b/style.css
@@ -1,18 +1,10 @@
 /* calculadora*/
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-}
 body{
-    border: 2px solid #000000;
-    background: linear-gradient(#d4dadd, #a245e0);
-    
+    background-color: rgb(195, 150, 247);
+    color: rgb(14, 3, 15);
+    font-family: 'Nerko One', cursive;
 }
-
 .container{
     height: 100vh;
     display: flex;
@@ -24,20 +16,19 @@ body{
     background-color: #ecf0f3;
     padding: 15px;
     width: 242px;
-    font-family: 'Roboto', sans-serif;
-    font-size: medium;
-    font-weight: 500;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    box-shadow: 1px 1px 4px #ecf0f3,
-                -2px -2px 4px #0f0f0f;
+    border: 1.5px solid #1e1422;
+    font-family: 'Nerko One', cursive;
+    font-weight: 400;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 1px 1px 4px #ecf0f3,                -2px -2px 4px #0f0f0f;
 }
 
 #result{
-    width: 100%;
+    width: 95%;
     height: 50px;
     margin-bottom: 5px;
     box-shadow: inset 1px 0 2px #a09f9f;
@@ -45,10 +36,11 @@ body{
 
 .btn,
 .operator{
-    width: 50px;
+    width: 56px;
     height: 60px;
     margin-bottom: 5px;
-    box-shadow: 1px 1px 3px #363636,
+    font-weight: 500;
+    box-shadow: 1px 1px 1px #363636,
                 -1px -1px 3px #fff;
     transition: all .3s;
     -webkit-transition: all .3s;
@@ -57,55 +49,52 @@ body{
     -o-transition: all .3s;
 }
 .operator:hover{
-    background-color: #bd6af5;
+    background-color: #d698f7;
+    color:rgb(238, 234, 234);
 }
 .btnEqual{
-    width: 102px;
+    width: 49%;
     height: 60px;
-    background-color: rgb(250, 185, 107);
+    background-color: rgb(250, 202, 144);
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
 }
 
 /* boton modo oscuro*/
-label{
-    background: #f7f8b3;
-    width:60px;
-    height: 23px;
-    display:inline-block;
-    margin-top:10px;
-    margin-left: 10px;
-    border:2px solid rgba(0,0,0,0.5);
-    padding:0;
-    border-radius:15px;
-}
-label .toggle{
-    transition: .2s;
-    width:23px;
-    height: 23px;
-    border:1px solid rgba(0,0,0,0.5);
-    display:block;
-    border-radius:100%;
-    background: rgb(253, 249, 249);
-    -webkit-transition: .2s;
-    -moz-transition: .2s;
-    -ms-transition: .2s;
-    -o-transition: .2s;
-}
-
-input[type="checkbox"]{
-    display:none;
-}
-
-input[type="checkbox"]:checked + .toggle{
-    margin-left:36px;
-    background-color: #37393f;
-}
 
 .dark{
-    background-color: #252525;
+    background-color: rgb(14, 3, 15);
+    color: #d7b1ec;
 }
-.light{
-    background-color:#ecf0f3;
+
+.fa-moon{
+    background:rgb(238, 234, 234);
+    position: relative;
+    cursor: pointer;
+    border: 1px solid #17002b;
+    width: 30px;
+    height: 30px;
+    top: 16vh;
+    left: 38vh;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
+    align-items: center;
+    justify-content: space-between;
 }
+.fa-moon span{
+    
+    line-height: 40px;
+    display: block;
+    color: #fff;
+    background: none;
+}
+
 
 /* Mobile */
 
@@ -122,14 +111,14 @@ input[type="checkbox"]:checked + .toggle{
         width: 50px;
         height: 60px;
         margin-bottom: 5px;
-        box-shadow: 1px 1px #363636;
+        box-shadow: 1px solid #363636;
     }
     .operator:hover{
         background-color: #bd6af5;
     }
     .btnEqual{
-        width: 102px;
+        width: 49%;
         height: 60px;
-        background-color: rgb(250, 185, 107);
+        background-color: rgb(255, 219, 175);
     }
 }
